--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,7 @@
 	<title>Login V2</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <!--===============================================================================================-->	
 	<link rel="icon" type="image/png" href="{{ url_for('static', filename = 'images/icons/favicon.ico') }}"/>
 <!--===============================================================================================-->
@@ -31,11 +32,10 @@
 </head>
 <body>
 
-	
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
-				<form class="login100-form validate-form">
+				<form  class="login100-form" method="POST">
 					<span class="login100-form-title p-b-26">
 						Admin Login
 					</span>
@@ -50,26 +50,31 @@
 						<span class="btn-show-pass">
 							<i class="zmdi zmdi-eye"></i>
 						</span>
-						<input class="input100" type="password" name="password">
+						<input class="input100" type="password" name="pass">
 						<span class="focus-input100" data-placeholder="Password"></span>
 					</div>
 
 					<div class="container-login100-form-btn">
 						<div class="wrap-login100-form-btn">
 							<div class="login100-form-bgbtn"></div>
-							<button class="login100-form-btn"><a href="{{url_for('index')}}">
+							<button class="login100-form-btn"><a href="{{url_for('login')}}"></a>
 								Login
-                            </a>
+                            </div>
 							</button>
+
 						</div>
+                        {%if error %}
+                            <p class = error ><strong>Error:</strong>{{error}}</p>
+                            {%endif%}
 					</div>
 				</form>
 			</div>
 		</div>
 	</div>
-	
+
 
 	<div id="dropDownSelect1"></div>
+ <script src="{{ url_for('static', filename = 'assets/plugins/bootstrap.min.js') }}"></script>
 	
 <!--===============================================================================================-->
 	<script src="{{ url_for('static', filename = 'vendor/jquery/jquery-3.2.1.min.js') }}"></script>
@@ -87,6 +92,7 @@
 	<script src="{{ url_for('static', filename = 'vendor/countdowntime/countdowntime.js') }}"></script>
 <!--===============================================================================================-->
 	<script src="{{ url_for('static', filename = 'js/main.js') }}"></script>
+
 
 
 </body>
