--- a/templates/Booking.html
+++ b/templates/Booking.html
@@ -36,7 +36,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{ url_for('login') }}">TourNearby</a>
+                <a class="navbar-brand" href="{{ url_for('index') }}">TourNearby</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -44,6 +44,7 @@
                     <li><a href="{{ url_for('booking') }}">BOOKING</a></li>
                     <li><a href="{{ url_for('packages') }}">PACKAGE</a></li>
                     <li><a href="{{ url_for('contact') }}">CONTACT</a></li>
+                    <li><a href="{{ url_for('login') }}">LOGIN</a></li>
                 </ul>
             </div>
 
