--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -35,7 +35,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{ url_for('login') }}">TourNearby</a>
+                <a class="navbar-brand" href="{{ url_for('index') }}">TourNearby</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -43,6 +43,7 @@
                     <li><a href="{{ url_for('booking') }}">BOOKING</a></li>
                     <li><a href="{{ url_for('packages') }}">PACKAGE</a></li>
                     <li><a href="{{ url_for('contact') }}">CONTACT</a></li>
+                    <li><a href="{{ url_for('login') }}">LOGIN</a></li>
                 </ul>
             </div>
 
@@ -68,16 +69,16 @@
                         <br />
                         <strong> Phone Number: </strong> &nbsp;+91-9080453490
                     </p>
-                    <form>
+                    <form method="post">
                         <div class="row">
                             <div class="col-md-6 ">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" required="required" placeholder="Name">
+                                    <input type="text" class="form-control" required="required" placeholder="Name" name="name">
                                 </div>
                             </div>
                             <div class="col-md-6 ">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" required="required" placeholder="Email address">
+                                    <input type="text" class="form-control" required="required" placeholder="Email address" name="email">
                                 </div>
                             </div>
                         </div>
