--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -78,7 +78,7 @@
                             </div>
                             <div class="col-md-6 ">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" required="required" placeholder="Email address" name="email">
+                                    <input type="email" class="form-control"pattern="/^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" required="required" placeholder="Email address" name="email">
                                 </div>
                             </div>
                         </div>
