--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -77,8 +77,8 @@
                                 </div>
                             </div>
                             <div class="col-md-6 ">
-                                <div class="form-group">
-                                    <input type="email" class="form-control"pattern="/^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" required="required" placeholder="Email address" name="email">
+                                <div class="form-group validate-input"data-validate = "Valid email is: a@b.c">
+                                    <input type="email" class="form-control" data-validate = "Valid email is: a@b.c" required="required" placeholder="Email address" name="email">
                                 </div>
                             </div>
                         </div>
